# parquet_sample

./: README.md  input.csv
sample/: .gitignore  Cargo.toml
sample/src/: filter.rs  group.rs  main.rs  maker.rs  move_csv.rs  read_all.rs  schema.rs
