[package]
name = "sample"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
arrow = { version = "55", features = ["prettyprint"] }
bytes = "1"
futures-util = "0.3.31"
parquet = { version = "55", features = ["json", "async"] }
sysinfo = "0.34"
tokio = { version="1", features=["macros", "rt-multi-thread", "fs"] }
